[package]
name = "rustbucks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
chrono = "0.4.38"
fixed = "1.27.0"
futures = "0.3.30"
rand = "0.8.5"
serde = "1.0.203"
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
